--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,8 @@ body{
 }
 .header__menu__link{
     font-family: var(--fuente-montserrat);
-    font-size: 24px;
+    /* font-size: 24px; */
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--color-terciario);
     text-decoration: none;
@@ -57,14 +58,16 @@ body{
 }
 
 .presentacion__contenido{
-    width: 615px;
+    /* width: 615px; */
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
 .presentacion__contenido__titulo{
-    font-size: 36px;
+    /* font-size: 36px; */
+    font-size: 2.25rem;
     font-family: 'Krona One', sans-serif;
 }
 
@@ -73,7 +76,8 @@ body{
 }
 
 .presentacion__contenido__texto{
-    font-size: 24px;
+    /* font-size: 24px; */
+    font-size: 1.5rem;
     font-family: var(--fuente-montserrat);
 }
 
@@ -88,28 +92,35 @@ body{
 .presentacion__enlaces__subtitulo{
     font-family: var(--fuente-krona);
     font-weight: 400;
-    font-size: 24px;
+    /* font-size: 24px; */
+    font-size: 1.5rem;
 }
 
 .presentacion__enlaces__link{
       
-      display: flex;
-      justify-content: center;
-      gap: 16px;
-      border: 2px solid var(--color-terciario);
-      width: 378px;
-      text-align: center;
-      border-radius: 8px;
-      font-size: 24px;
-      font-weight: 600;
-      padding: 21.5px 0;
-      text-decoration: none;
-      color: var(--color-secundario);
-      font-family: var(--fuente-montserrat);
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    border: 2px solid var(--color-terciario);
+    /* width: 378px; */
+    width: 50%;
+    text-align: center;
+    border-radius: 8px;
+    /* font-size: 24px; */
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: var(--color-secundario);
+    font-family: var(--fuente-montserrat);
 }
 
 .presentacion__enlaces__link:hover{
     background-color: var(--color-hover);
+}
+
+.presentacion__imagen {
+    width: 50%;
 }
 
 .footer{
@@ -118,7 +129,29 @@ body{
     padding: 24px;
     text-align: center;
     font-family: var(--fuente-montserrat);
-    font-size: 24px;
+    /* font-size: 24px; */
+    font-size: 1.5rem;
     font-weight: 400;
     height: 30vh;
+}
+
+@media (max-width: 1200px ){
+
+    .header {
+        padding: 10%;
+    }
+
+    .heder__menu {
+        justify-content: center;
+    }
+
+    .presentacion {
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .presentacion__contenido {
+        width: auto;
+        /* width: 100%; */
+    }
 }
